[gd_scene load_steps=2 format=3 uid="uid://v3g2kwpbw3u6"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/signalNode.gd" id="1"]

[node name="SignalNode" type="GraphNode"]
offset_right = 200.0
offset_bottom = 60.0
title = "Signal"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="SignalValue" type="LineEdit" parent="."]
layout_mode = 2
tooltip_text = "The String value passed in the signal parameter."
placeholder_text = "Value"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="text_changed" from="SignalValue" to="." method="_on_node_modified"]
[connection signal="text_changed" from="SignalValue" to="." method="_on_signal_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
